--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,7 @@
             "email": "68276851+virtualsufi@users.noreply.github.com"
         }
     ],
-    "require": {}
+    "require": {
+        "mikecao/flight": "^1.3"
+    }
 }
